--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.16.7",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
     "react": "^18.2.0",
